--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
      <script>fnTest();</script>
   </section>
   <footer>
-    <p>&copy; 20XX made by korea. All right reserved.</p></footer>
+    <p>&copy; 20XX Made by Korea. All right reserved.</p></footer>
 </body>
 </html>
