--- a/koreaAnthem.html
+++ b/koreaAnthem.html
@@ -1,4 +1,4 @@
-<!doctype>  <--   koreaAnthem.html   -->
+<!doctype html>  <--   koreaAnthem.html   -->
 <html lang="ko">
   <head>
     <meta charset="utf-8"/>
