--- a/koreaAnthem3.html
+++ b/koreaAnthem3.html
@@ -15,5 +15,5 @@
 </head>
 <body>
   <h4>애국가</h4>
-  <p onclick="event1onclick()">id_1</p><p onclick="event2onclick()">id_2<p onclick="event3onclick()">id_3</p><p onclick="event4onclick()">id_4</p><p id="id_1">메시지표시</p>
+  <p onclick="event1onclick()">1절</p><p onclick="event2onclick()">2절<p onclick="event3onclick()">3절</p><p onclick="event4onclick()">4절</p><p id="id_1">메시지표시</p>
 </body></html>   
