--- a/basicHeading.html
+++ b/basicHeading.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport"content="width=device-width, initial-scale=1"/>
-  <title>문서 타이틀 표제</titile>
+  <title>문서 타이틀 표제</title>
 </head>
 <body>
   <h1>헤딩 h1</h1>
