--- a/basicPBrHr.html
+++ b/basicPBrHr.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <p>
-  HTML문서의 최상위 요소는 &it/html&gt;요소이다.<br/>html요소는<span style="color:blue;">HTML웹 문서의 시작과 끝을 설정</span>하고, 차상위 요소로 &it;head&gt;요소를 각각 하나만 포함한다.</p>
+  HTML문서의 최상위 요소는 &lt;html&gt;요소이다.<br/>html요소는<span style="color:blue;">HTML웹 문서의 시작과 끝을 설정</span>하고, 차상위 요소로 &it;head&gt;요소를 각각 하나만 포함한다.</p>
 <div id="div1">
   head 요소는 HTML문서를 설명하는 요소로,<hr/>하위요소로 &it;meta&gt;, &it;title&gt;, &it;link&gt;, &it;style&gt;, &it;script&gt; 요소가 가능.</div>
 <span id="span1">
