--- a/index_.html
+++ b/index_.html
@@ -1,4 +1,4 @@
-<!doctype html> <!--    index.html    -->
+<!doctype html> <!--    index_.html    -->
 <html>
 <head>
 <meta http-equiv="Content-type"content="text/html;charset=utf-8"/>
