--- a/basicDlist.html
+++ b/basicDlist.html
@@ -6,7 +6,7 @@
   <title>기술 리스트 예제</title>
 </head>
 <body>
-  <h1 id="bList"기술목록 태그</h1>
+  <h1 id="bList">기술목록 태그</h1>
   <di>
     <dt>type="1"</dt>
     <dd>숫자표시, 1, 2, 3,... </dd>
