--- a/koreaAnthem5.html
+++ b/koreaAnthem5.html
@@ -17,7 +17,6 @@
   <h4>애국가</h4>
   <ul style="list-style-type:square">
   <li onclick="event1onclick()">1절</li><li onclick="event2onclick()">2절</li>
-  <li onclick="event3onclick()">3절</li><li onclick="event4onclick()">4절</li><p id="id_1">메시지표기</P>
-  </ul>
+  <li onclick="event3onclick()">3절</li><li onclick="event4onclick()">4절</li><p id="id_1">메시지표기</P></ul>
 </body>
 </html>
