--- a/koreaAnthem5.html
+++ b/koreaAnthem5.html
@@ -21,7 +21,7 @@
 			<li onclick="event1onclick()">1절</li>
 			<li onclick="event2onclick()">2절</li>
 			<li onclick="event3onclick()">3절</li>
-			<li onclick="event4onclick()">4절</li>
+			<li onclick="event4onclick()">4절
 			<p id="id_1">메시지표시</p>
   		</ul>
 	</body>
