--- a/koreaAnthem6.html
+++ b/koreaAnthem6.html
@@ -4,29 +4,29 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <script>
-      function event1onclick(){   document.getElementByld("id_1").innerHTML
+      function event1onclick(){   document.getElementById("id_1").innerHTML
         ="동해물과 백두산이 마르고 닳도록 하는님이 보우하사 <mark>우리나라 만세</mark><br/><i>(후렴) 무궁화 삼천리 화려강산 대한 사람 대한으로 길이 보전하세</i><br/>";
-        document.getElementByld("id_2").innerHTML="";
-        document.getElementByld("id_3").innerHTML="";
-        document.getElementByld("id_4").innerHTML="";
+        document.getElementById("id_2").innerHTML="";
+        document.getElementById("id_3").innerHTML="";
+        document.getElementById("id_4").innerHTML="";
       }
-      function event2onclick(){   document.getElementByld("id_2").innerHTML
+      function event2onclick(){   document.getElementById("id_2").innerHTML
         ="남산 위에 저 소나무 철갑을 두른 듯 바람 서리 불변함은 <mark>우리 기상일세</mark><br/><i>(후렴) 무궁화 삼천리 화려강산 대한 사람 대한으로 길이 보전하세</i><br/>";
-        document.getElementByld("id_1").innerHTML="";
-        document.getElementByld("id_3").innerHTML="";
-        document.getElementByld("id_4").innerHTML="";
+        document.getElementById("id_1").innerHTML="";
+        document.getElementById("id_3").innerHTML="";
+        document.getElementById("id_4").innerHTML="";
       }
-      function event3onclick(){   document.getElementByld("id_3").innerHTML
+      function event3onclick(){   document.getElementById("id_3").innerHTML
         ="이 기상과 이 맘으로 충성을 다하여 괴로우나 즐거우나 <mark>나라 사람하세</mark><br/><i>(후렴) 무궁화 삼천리 화려강산 대한 사람 대한으로 길이 보전하세</i><br/>";
-        document.getElementByld("id_2").innerHTML="";
-        document.getElementByld("id_1").innerHTML="";
-        document.getElementByld("id_4").innerHTML="";
+        document.getElementById("id_2").innerHTML="";
+        document.getElementById("id_1").innerHTML="";
+        document.getElementById("id_4").innerHTML="";
       }
-      function event4onclick(){   document.getElementByld("id_4").innerHTML
+      function event4onclick(){   document.getElementById("id_4").innerHTML
         ="동해물과 백두산이 마르고 닳도록 하는님이 보우하사 <mark>우리나라 만세</mark><br/><i>(후렴) 무궁화 삼천리 화려강산 대한 사람 대한으로 길이 보전하세</i><br/>";
-        document.getElementByld("id_2").innerHTML="";
-        document.getElementByld("id_3").innerHTML="";
-        document.getElementByld("id_1").innerHTML="";
+        document.getElementById("id_2").innerHTML="";
+        document.getElementById("id_3").innerHTML="";
+        document.getElementById("id_1").innerHTML="";
       }
     </script>
     <title>애국가</title>
