--- a/advTable1.html
+++ b/advTable1.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <table>
-    <caption>&lt;표1&gt; 한국대도시 정보현황</caption>
+    <caption>&it;표1&gt; 한국대도시 정보현황</caption>
     <thead>
       <tr><th rowspan="2">도시명</th><th rowspan="2">면적</th><th rowspan="2">인구수</th><th rowspan="2">위경도</th></tr>
       <tr>                                          <th>위도</th><th>경도</th></tr>
