--- a/tableHw.html
+++ b/tableHw.html
@@ -5,7 +5,7 @@
   <title>테이블 테스트 실습</title>
 </head>
 <body>
-  <h1>테이블 테그</h1>
+  <h1>테이블 태그</h1>
   <table border=1>
     <thead>
       <tr><th>셀(1,1)</th> <th>셀(1,2)</th> <th>셀(1,3)</th></tr>
