--- a/subjectTable.html
+++ b/subjectTable.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <table>
-    <caption>&lt;표 1;&gt; 시간표</caption>
+    <caption>&lt;표 1&gt; 시간표</caption>
     <thead>
       <tr><th>시간</th> <th>월</th><th>화</th><th>수</th><th>목</th><th>금</th></tr>
     </thead>
