--- a/basicSemantic.html
+++ b/basicSemantic.html
@@ -8,7 +8,7 @@
       {border:1px solid gray; margin:5px; padding:8px; width:1000px;}
       section{width:750px; float:left; }
       aside{width:221px; float:left; line-height:30px; }
-      footer{heigt:50px; clear:both; }
+      footer{height:50px; clear:both; }
       nav ul{margin:0; padding:0; }
       nav ul li{display:inline; margin:5px; }
       aside ul{margin:0; padding:0; }
