--- a/anchor1.html
+++ b/anchor1.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <title>HTML 앵커 실습</title>
+    <title>HTML5 앵커 실습</title>
   </head>
   <body>
     <h3 id="chapter1">제1장</h3>
