--- a/anchor2.html
+++ b/anchor2.html
@@ -1,7 +1,7 @@
 <!DOCTYPEhtml>  <!--  anchor2.html  -->
 <html>
   <head>
-      <title>HTML 앵커 실습</title>
+      <title>HTML5 앵커 실습</title>
   </head>
   <body>
     <h3 id="chapter1">Anchor 2</h3>
