--- a/advAnchor.html
+++ b/advAnchor.html
@@ -3,7 +3,16 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    
+    <style>
+      a:link{
+        color:blue; background-color:transparent; text-decoration:none;}
+      a:visited{
+        color:pink; background-color:transparent; text-decoration:none;}
+      a:hover{
+        color:red; background-color:transparent; text-decoration:underline;}
+      a:active{
+        color:blue; background-color:transparent; text-decoration:none;}
+    </style>
     <title>HTML5 앵커 실습</title>
   </head>
   <body>
