--- a/basicSemantic1.html
+++ b/basicSemantic1.html
@@ -31,7 +31,7 @@
     </header>
     <nav>
       <ul>
-        <li><a href="http://www.naver.com" target="_blank>네이버(새윈도우)</a></li>
+        <li><a href="http://www.naver.com" target="_blank">네이버(새윈도우)</a></li>
         <li><a href="anchor2.html">사이트내문서이동</a></li>
         <li><a href="#chapter1">제1장이동(북마크이동)</a></li>
       </ul>
