--- a/DaeJeonUniversityCampusMap.html
+++ b/DaeJeonUniversityCampusMap.html
@@ -1,4 +1,4 @@
-<!doctype html> <-- DaeJeonUniversityCampusMap.html  -->
+<!doctype html> <!-- DaeJeonUniversityCampusMap.html  -->
 <html>
   <head>
     <meta charset="utf-8"/>
