--- a/16.html
+++ b/16.html
@@ -6,7 +6,7 @@
     <title>대전대학교 - 상징의 광장</title>
   </head>
   <body>
-    <p>테니스장</p>
+    <p>상징의 광장</p>
     <p>대전대학교의 상징의 광장입니다.</p>
   </body>
 </html>
