--- a/21.html
+++ b/21.html
@@ -8,5 +8,8 @@
   <body>
     <p>물의광장</p>
     <p>대전대학교의 물의광장입니다.</p>
+    <p>물은 서로 다른 곳에서 와 합칠 뿐, 내치거나 다투지 않는다.</p>
+    <p>국내외 학생들의 어우러짐.</p>
+    <p>이는 서로 다른 물길이 만나 이룬 글로컬리제이션(glocalization)한 풍경이다.</p>
   </body>
 </html>
