--- a/basicVideo.html
+++ b/basicVideo.html
@@ -1,4 +1,4 @@
-<!DOCTYPEhtml> <!--  basicVieo.html  -->
+<!DOCTYPEhtml> <!--  basicVideo.html  -->
 <html>
   <head>
     <meta charset="utf-8"/>
@@ -10,6 +10,11 @@
     <video controls="controls" height="320" width="200">
       <source src="./traffic.mp4" type="video/mp4">
         브라우저가 지원하지 않거나 비디오 형식의 파일이 존재하지 않습니다!!!
-    </video?<hr/>
+    </video><hr/>
+    <h4>비디오 태그 2</h4>
+    <video controls="controls" height="320" width="200">
+      <source src="./traffic.mp4" type="video/mp4">
+        브라우저가 지원하지 않거나 비디오 형식의 파일이 존재하지 않습니다!!!
+    </video><hr/>
   </body>
 </html>
