--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <section>
   <p>(설명문)가나다 순으로 자신의 이름을 입력, 마지막 작성자는 JSP(내이름)과(설명문)을 반드시 지울것</p>
   <ol type="1">
-  <li><a href="https://youngjaekim22.github.io/" target="_blank">김영재</a></li>
+  <li><a href="https://github.com/youngjaekim22/youngjaekim22.github.io/"target="_blank">김영재</a></li>
   <li><a href="https://yyyyyyyyyyyyy.github.io/"target="_blank">이몽룡</a></li>
   </ol>
 </section>
