--- a/개인별index.html
+++ b/개인별index.html
@@ -11,7 +11,9 @@
   <title>2020년도 김영재(20171347) 인터넷 수강</title>
 </head>
 <body>
-<header></header>
+<header>
+  <h1>20171347 컴퓨터공학과 김영재</h1>
+</header>
 <section>
   <p>2020-03-19 실습 내용</p>
   <ol type="1">
