--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 <body>
 <header></header>
 <section>
-  <p>(설명문)가나다 순으로 자신의 이름을 입력, 마지막 작성자는 JSP(내이름)과(설명문)을 반드시 지울것</p>
+  <p>(설명문) <- 아래 설명문 지우지 말 것</p>
+  <p>1. 본인 이름을 선착순 및 가나다순으로 아래 양식으로 입력할 것</p>
+  <p>2. 자유게시판에 앞 사람의 입력내용에 추가하여 계속적으로 추가 작성</p>
+  <p>3. 첫 학생은 홍길동을 기준으로 가나다순 입력</p>
+  <p>4. 두번째 학생은 홍길동과 첫번째 학생이름을 기준으로 가나다순 입력</p>
+  <p>5. 마지막 학생까지 계속 진행하여 리스트 완성</p>
   <ol type="1">
   <li><a href="https://github.com/youngjaekim22/youngjaekim22.github.io/"target="_blank">김영재</a></li>
-  <li><a href="https://yyyyyyyyyyyyy.github.io/"target="_blank">이몽룡</a></li>
   </ol>
 </section>
 </body>
