--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
     <h3>학번 : 20171347</h3>
     <h3>학과 : 컴퓨터공학과</h3>
     <table>
-      <tr><th colspan="4", rowspan="4">사 진</th><th rowspan="16">기술이력서 컴퓨터능력</th></tr>
+      <tr><th colspan="4" rowspan="4">사 진</th><th rowspan="16">기술이력서 컴퓨터능력</th></tr>
     </table>
   </body>
 </html>
