--- a/test.html
+++ b/test.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <style>
+    table, thead, tbody, tfoot, tr, th, td {border:1px solid black; border-collapse:collapse; text-align: center;}
+  </style>
     <title>개인별 과제 - 20171347 컴퓨터공학과 김영재</title>
   </head>
   <body>
