--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
     <h3>학번 : 20171347</h3>
     <h3>학과 : 컴퓨터공학과</h3>
     <table>
-      <caption>개인별 프로젝트 - 기술이력서(컴퓨터능력)0</caption>
+      <caption>개인별 프로젝트 - 기술이력서(컴퓨터능력)</caption>
       <thead>
         <tr><th colspan="4" rowspan="4">사진</th><th rowspan="16">기술이력서(컴퓨터능력)</th></tr>
       </thead>
