--- a/test.html
+++ b/test.html
@@ -13,13 +13,13 @@
     <h3>학번 : 20171347</h3>
     <h3>학과 : 컴퓨터공학과</h3>
     <table>
-      <caption>개인별 프로젝트 - 기술이력서(컴퓨터능력)0</caption>
-      <tbody>
+      <caption>개인별 프로젝트 - 기술이력서(컴퓨터능력)</caption>
+      <thead>
       <tr><th colspan="4" rowspan="4">사진</th><th rowspan="16">기술이력서(컴퓨터능력)</th></tr>
       <tr><th colspan="2" rowspan="2">서명</th><th colspan="2">한글</th><th colspan="4">김영재</th><th colspan="4">주민번호</th><th colspan="4">98XXXX-XXXXXXX</th></tr>
       <tr>                                      <th colspan="2">영어</th><th colspan="4">YoungJaeKim</th><th colspan="4">연락처</th><th colspan="4">010-XXXX-XXXX</th></tr>
       <tr>                            <th colspan="4">주소</th><th rowspan="16">대전광역시 XX구 XX동 XX아파트 XXX호</th></tr>
-      </tbody>
+      </thead>
     </table>
   </body>
 </html>
