--- a/개인별과제.html
+++ b/개인별과제.html
@@ -1,4 +1,36 @@
 <!doctype html>  <!-- 개인별과제.html  -->
 <html>
-  
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <title>개인별 과제 - 20171347 컴퓨터공학과 김영재</title>
+  </head>
+  <body>
+    <h3>이름 : 김영재</h3>
+    <h3>학번 : 20171347</h3>
+    <h3>학과 : 컴퓨터공학과</h3>
+    <table>
+      <caption>개인별 프로젝트 - 기술이력서(컴퓨터능력)</caption>
+      <tr><th colspan="4" rowspan="4">사진</th><th rowspan="16">기술이력서(컴퓨터능력)</th></tr>
+      <tr><th colspan="2" rowspan="2">서명</th><th colspan="2">한글</th><th colspan="4">김영재</th><th colspan="4">주민번호</th><th colspan="4">98XXXX-XXXXXXX</th></tr>
+      <tr>                                      <th colspan="2">영어</th><th colspan="4">YoungJaeKim</th><th colspan="4">연락처</th><th colspan="4">010-XXXX-XXXX</th></tr>
+      <tr>                            <th colspan="4">주소</th><th rowspan="16">대전광역시 XX구 XX동 XX아파트 XXX호</th></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+      <tr></tr>
+    </table>
+  </body>
 </html>
