--- a/test.html
+++ b/test.html
@@ -18,7 +18,7 @@
       <tr><th rowspan="4" colspan="4">사진</th><th colspan="16">기술이력서(컴퓨터능력)</th></tr>
       <tr><th colspan="2" rowspan="2">서명</th><th colspan="2">한글</th><th colspan="4">김영재</th><th colspan="4">주민번호</th><th colspan="4">98XXXX-XXXXXXX</th></tr>
       <tr>                                      <th colspan="2">영어</th><th colspan="4">YoungJaeKim</th><th colspan="4">연락처</th><th colspan="4">010-XXXX-XXXX</th></tr>
-      <tr>                            <th colspan="4">주소</th><th rowspan="20">대전광역시 XX구 XX동 XX아파트 XXX호</th></tr>
+      <tr>                            <th colspan="4">주소</th><th colspan="16">대전광역시 XX구 XX동 XX아파트 XXX호</th></tr>
       </thead>
     </table>
   </body>
