--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
     <h3>학번 : 20171347</h3>
     <h3>학과 : 컴퓨터공학과</h3>
     <table>
-      <caption>개인별 프로젝트 - 기술이력서(컴퓨터능력)0</caption>
+      <caption>개인별 프로젝트 - 기술이력서(컴퓨터능력)</caption>
         <tr><th rowspan="4" colspan="4">사진</th><th colspan="16">기술이력서(컴퓨터능력)</th></tr>
         <tr><th colspan="2" rowspan="2">서명</th><th colspan="2">한글</th><th colspan="4">김영재</th><th colspan="4">주민번호</th><th colspan="4">98XXXX-XXXXXXX</th></tr>
         <tr>                                      <th colspan="2">영어</th><th colspan="4">YoungJaeKim</th><th colspan="4">연락처</th><th colspan="4">010-XXXX-XXXX</th></tr>
