--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
     <h3>학번 : 20171347</h3>
     <h3>학과 : 컴퓨터공학과</h3>
     <table>
-      <caption>개인별 프로젝트 - 기술이력서(컴퓨터능력)</caption>
+      <caption>개인별 프로젝트 - 기술이력서(컴퓨터능력)0</caption>
         <tr><th rowspan="4" colspan="4">사진</th><th colspan="16">기술이력서(컴퓨터능력)</th></tr>
         <tr><th colspan="2" rowspan="2">서명</th><th colspan="2">한글</th><th colspan="4">김영재</th><th colspan="4">주민번호</th><th colspan="4">98XXXX-XXXXXXX</th></tr>
         <tr>                                      <th colspan="2">영어</th><th colspan="4">YoungJaeKim</th><th colspan="4">연락처</th><th colspan="4">010-XXXX-XXXX</th></tr>
@@ -22,7 +22,7 @@
         <tr><th colspan="6">05. 3. 1 ~ 11. 2.19</th><th colspan="6">대전석봉초등학교</th><th colspan="4">의무교육</th></tr>
         <tr><th colspan="6">11. 3. 1 ~ 14. 2. 5</th><th colspan="6">대전만년중학교</th><th colspan="4">의무교육</th></tr>
         <tr><th colspan="6">14. 3. 1 ~ 17. 2. 3</th><th colspan="6">대전만년고등학교</th><th colspan="4">이과</th></tr>
-        <tr<td colspan="6">17. 3. 1 ~ 재학</td><td colspan="6">대전대학교</td><td colspan="4">컴퓨터공학과</td>></tr>
+        <tr<th colspan="6">17. 3. 1 ~ 재학     </th><th colspan="6">대전대학교</th><th colspan="4">컴퓨터공학과</th>></tr>
         <tr></tr>
     </table>
   </body>
