--- a/test.html
+++ b/test.html
@@ -23,7 +23,14 @@
         <tr><th colspan="6">11. 3. 1 ~ 14. 2. 5</th><th colspan="6">대전만년중학교</th><th colspan="4">의무교육</th></tr>
         <tr><th colspan="6">14. 3. 1 ~ 17. 2. 3</th><th colspan="6">대전만년고등학교</th><th colspan="4">이과</th></tr>
         <tr><th colspan="6">17. 3. 1 ~ 재학</th><th colspan="6">대전대학교</th><th colspan="4">컴퓨터공학과</th>></tr>
-        <tr></tr>
+        <tr><th rowspan="4" colspan="4">수강(예정)과목</th><th colspan="8">수강과목</th><th colspan="8">수강 예정 과목</th></tr>
+        <tr>                                               <th colspan="8">이산수학</th><th colspan="8">JAVA 프로그래밍</th></tr>
+        <tr>                                               <th colspan="8">C프로그래밍</th><th colspan="8">컴퓨터 통신 보안</th></tr>
+        <tr>                                               <th colspan="8">인터넷응용</th><th colspan="8">네트워크 보안</th></tr>
+        <tr><th rowspan="4" colspan="4">자격증 및 면허</th><th colspan="6">취득 연월</th><th colspan="6">자격 - 면허명</th><th colspan="4">발행기관</th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보처리 산업기사</th><th colspan="4">한국산업인력공단</th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보보안 산업기사</th><th colspan="4">한국인터넷진흥원</th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">CISA</th><th colspan="4">정보시스템 감사 컨트롤 협회</th></tr>
     </table>
   </body>
 </html>
