--- a/test.html
+++ b/test.html
@@ -26,11 +26,17 @@
         <tr><th rowspan="4" colspan="4">수강(예정)과목</th><th colspan="8">수강과목</th><th colspan="8">수강 예정 과목</th></tr>
         <tr>                                               <th colspan="8">이산수학</th><th colspan="8">JAVA 프로그래밍</th></tr>
         <tr>                                               <th colspan="8">C프로그래밍</th><th colspan="8">컴퓨터 통신 보안</th></tr>
-        <tr>                                               <th colspan="8">인터넷응용</th><th colspan="8">네트워크 보안</th></tr>
+        <tr>                                               <th colspan="8">인터넷 응용</th><th colspan="8">네트워크 보안</th></tr>
         <tr><th rowspan="4" colspan="4">자격증 및 면허</th><th colspan="6">취득 연월</th><th colspan="6">자격 - 면허명</th><th colspan="4">발행기관</th></tr>
         <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보처리 산업기사</th><th colspan="4">한국산업인력공단</th></tr>
         <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보보안 산업기사</th><th colspan="4">한국인터넷진흥원</th></tr>
         <tr>                                              <th colspan="6">(예정)</th><th colspan="6">CISA</th><th colspan="4">정보시스템 감사 컨트롤 협회</th></tr>
+        <tr><th rowspan="3" colspan="4">교내 ○ 외 경진 대회</th><th colspan="6">참가 연월</th><th colspan="6">대회명</th><th colspan="4">수상경력</th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">부산 ICT 융합 해카톤 대회</th><th colspan="4">(예정)</th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">캡스톤 디자인 경진 대회</th><th colspan="4">(예정)</th></tr>
+        <tr><th rowspan="3" colspan="4">프로젝트</th><th colspan="6">학년 - 학기</th><th colspan="6">과목</th><th colspan="4">프로젝트명</th></tr>
+        <tr>                                              <th colspan="6">2학년 1학기</th><th colspan="6">인터넷 응용</th><th colspan="4">개인별Index.html</th></tr>
+        <tr>                                              <th colspan="6">2학년 1학기</th><th colspan="6">인터넷 응용</th><th colspan="4">기술이력서.html</th></tr>
     </table>
   </body>
 </html>
