--- a/test.html
+++ b/test.html
@@ -19,7 +19,7 @@
         <tr>                                      <th colspan="2">영어</th><th colspan="4">YoungJaeKim</th><th colspan="4">연락처</th><th colspan="4">010-XXXX-XXXX</th></tr>
         <tr>                            <th colspan="4">주소</th><th colspan="12">대전광역시 XX구 XX동 XX아파트 XXX호</th></tr>
         <tr><th rowspan="5" colspan="4">학력</th><th colspan="6">기간</th><th colspan="6">학교명</th><th colspan="4">전공</th></tr>
-        <tr><th colspan="6">05. 3. 1 ~ 11. 2.19</th><th colspan="6">대전석봉초등학교</th><th colspan="4">의무교육</th></tr>
+        <tr><th colspan="6">05. 3. 1 ~ 11. 2.19</th><th colspan="6"><a href="http://seokbonges.djsch.kr/main.do" target="_blank">대전석봉초등학교</a></th><th colspan="4">의무교육</th></tr>
         <tr><th colspan="6">11. 3. 1 ~ 14. 2. 5</th><th colspan="6">대전만년중학교</th><th colspan="4">의무교육</th></tr>
         <tr><th colspan="6">14. 3. 1 ~ 17. 2. 3</th><th colspan="6">대전만년고등학교</th><th colspan="4">이과</th></tr>
         <tr><th colspan="6">17. 3. 1 ~ 재학</th><th colspan="6">대전대학교</th><th colspan="4">컴퓨터공학과</th>></tr>
@@ -31,7 +31,7 @@
         <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보처리 산업기사</th><th colspan="4">한국산업인력공단</th></tr>
         <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보보안 산업기사</th><th colspan="4">한국인터넷진흥원</th></tr>
         <tr>                                              <th colspan="6">(예정)</th><th colspan="6">CISA</th><th colspan="4">정보시스템 감사 컨트롤 협회</th></tr>
-        <tr><th rowspan="3" colspan="4">교내 ○ 외 경진 대회</th><th colspan="6">참가 연월</th><th colspan="6">대회명</th><th colspan="4">수상경력</th></tr>
+        <tr><th rowspan="3" colspan="4">교내 ㆍ 외 경진 대회</th><th colspan="6">참가 연월</th><th colspan="6">대회명</th><th colspan="4">수상경력</th></tr>
         <tr>                                              <th colspan="6">(예정)</th><th colspan="6">부산 ICT 융합 해카톤 대회</th><th colspan="4">(예정)</th></tr>
         <tr>                                              <th colspan="6">(예정)</th><th colspan="6">캡스톤 디자인 경진 대회</th><th colspan="4">(예정)</th></tr>
         <tr><th rowspan="3" colspan="4">프로젝트</th><th colspan="6">학년 - 학기</th><th colspan="6">과목</th><th colspan="4">프로젝트명</th></tr>
