--- a/기술이력서.html
+++ b/기술이력서.html
@@ -6,7 +6,7 @@
     <style>
     table, thead, tbody, tfoot, tr, th, td {border:1px solid black; border-collapse:collapse; text-align: center;}
   </style>
-    <title>기술이력서 - 20171347 컴퓨터공학과 김영재</title>
+    <title>개인별 과제 - 20171347 컴퓨터공학과 김영재</title>
   </head>
   <body>
     <h3>이름 : 김영재</h3>
@@ -19,24 +19,24 @@
         <tr>                                      <th colspan="2">영어</th><th colspan="4">YoungJaeKim</th><th colspan="4">연락처</th><th colspan="4">010-XXXX-XXXX</th></tr>
         <tr>                            <th colspan="4">주소</th><th colspan="12">대전광역시 XX구 XX동 XX아파트 XXX호</th></tr>
         <tr><th rowspan="5" colspan="4">학력</th><th colspan="6">기간</th><th colspan="6">학교명</th><th colspan="4">전공</th></tr>
-        <tr><th colspan="6">05. 3. 1 ~ 11. 2.19</th><th colspan="6">대전석봉초등학교</th><th colspan="4">의무교육</th></tr>
-        <tr><th colspan="6">11. 3. 1 ~ 14. 2. 5</th><th colspan="6">대전만년중학교</th><th colspan="4">의무교육</th></tr>
-        <tr><th colspan="6">14. 3. 1 ~ 17. 2. 3</th><th colspan="6">대전만년고등학교</th><th colspan="4">이과</th></tr>
-        <tr><th colspan="6">17. 3. 1 ~ 재학</th><th colspan="6">대전대학교</th><th colspan="4">컴퓨터공학과</th>></tr>
+        <tr><th colspan="6">05. 3. 1 ~ 11. 2.19</th><th colspan="6"><a href="http://seokbonges.djsch.kr/main.do" target="_blank">대전석봉초등학교</a></th><th colspan="4">의무교육</th></tr>
+        <tr><th colspan="6">11. 3. 1 ~ 14. 2. 5</th><th colspan="6"><a href="http://mannyonms.djsch.kr/main.do" target="_blank">대전만년중학교</a></th><th colspan="4">의무교육</th></tr>
+        <tr><th colspan="6">14. 3. 1 ~ 17. 2. 3</th><th colspan="6"><a href="http://mannyonhs.djsch.kr/main.do" target="_blank">대전만년고등학교</a></th><th colspan="4">이과</th></tr>
+        <tr><th colspan="6">17. 3. 1 ~ 재학</th><th colspan="6"><a href="http://www.dju.ac.kr/kor/html/main.htm" target="_blank">대전대학교</a></th><th colspan="4">컴퓨터공학과</th>></tr>
         <tr><th rowspan="4" colspan="4">수강(예정)과목</th><th colspan="8">수강과목</th><th colspan="8">수강 예정 과목</th></tr>
         <tr>                                               <th colspan="8">이산수학</th><th colspan="8">JAVA 프로그래밍</th></tr>
         <tr>                                               <th colspan="8">C프로그래밍</th><th colspan="8">컴퓨터 통신 보안</th></tr>
         <tr>                                               <th colspan="8">인터넷 응용</th><th colspan="8">네트워크 보안</th></tr>
         <tr><th rowspan="4" colspan="4">자격증 및 면허</th><th colspan="6">취득 연월</th><th colspan="6">자격 - 면허명</th><th colspan="4">발행기관</th></tr>
-        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보처리 산업기사</th><th colspan="4">한국산업인력공단</th></tr>
-        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보보안 산업기사</th><th colspan="4">한국인터넷진흥원</th></tr>
-        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">CISA</th><th colspan="4">정보시스템 감사 컨트롤 협회</th></tr>
-        <tr><th rowspan="3" colspan="4">교내 ○ 외 경진 대회</th><th colspan="6">참가 연월</th><th colspan="6">대회명</th><th colspan="4">수상경력</th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보처리 산업기사</th><th colspan="4"><a href="http://www.hrdkorea.or.kr/" target="_blank">한국산업인력공단</a></th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보보안 산업기사</th><th colspan="4"><a href="https://www.kisa.or.kr/main.jsp" target="_blank">한국인터넷진흥원</a></th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">CISA</th><th colspan="4"><a href="http://www.isaca.or.kr/main/index.asp" target="_blank">정보시스템 감사 컨트롤 협회</a></th></tr>
+        <tr><th rowspan="3" colspan="4">교내 ㆍ 외 경진 대회</th><th colspan="6">참가 연월</th><th colspan="6">대회명</th><th colspan="4">수상경력</th></tr>
         <tr>                                              <th colspan="6">(예정)</th><th colspan="6">부산 ICT 융합 해카톤 대회</th><th colspan="4">(예정)</th></tr>
         <tr>                                              <th colspan="6">(예정)</th><th colspan="6">캡스톤 디자인 경진 대회</th><th colspan="4">(예정)</th></tr>
         <tr><th rowspan="3" colspan="4">프로젝트</th><th colspan="6">학년 - 학기</th><th colspan="6">과목</th><th colspan="4">프로젝트명</th></tr>
-        <tr>                                              <th colspan="6">2학년 1학기</th><th colspan="6">인터넷 응용</th><th colspan="4">개인별Index.html</th></tr>
-        <tr>                                              <th colspan="6">2학년 1학기</th><th colspan="6">인터넷 응용</th><th colspan="4">기술이력서.html</th></tr>
+        <tr>                                              <th colspan="6">2학년 1학기</th><th colspan="6">인터넷 응용</th><th colspan="4"><a href="http://seokbonges.djsch.kr/main.do" target="_blank">개인별Index.html</th></tr>
+        <tr>                                              <th colspan="6">2학년 1학기</th><th colspan="6">인터넷 응용</th><th colspan="4"><a href="http://seokbonges.djsch.kr/main.do" target="_blank">기술이력서.html</th></tr>
     </table>
   </body>
 </html>
