--- a/기술이력서.html
+++ b/기술이력서.html
@@ -6,9 +6,8 @@
     <style>
     table, thead, tbody, tfoot, tr, th, td {border:1px solid black; border-collapse:collapse; text-align: center;}
   </style>
-    <title>개인별 과제 - 20171347 컴퓨터공학과 김영재</title>
+    <title>기술이력서 - 20171347 컴퓨터공학과 김영재</title>
   </head>
-  <body>
     <h3>이름 : 김영재</h3>
     <h3>학번 : 20171347</h3>
     <h3>학과 : 컴퓨터공학과</h3>
@@ -24,19 +23,19 @@
         <tr><th colspan="6">14. 3. 1 ~ 17. 2. 3</th><th colspan="6"><a href="http://mannyonhs.djsch.kr/main.do" target="_blank">대전만년고등학교</a></th><th colspan="4">이과</th></tr>
         <tr><th colspan="6">17. 3. 1 ~ 재학</th><th colspan="6"><a href="http://www.dju.ac.kr/kor/html/main.htm" target="_blank">대전대학교</a></th><th colspan="4">컴퓨터공학과</th>></tr>
         <tr><th rowspan="4" colspan="4">수강(예정)과목</th><th colspan="8">수강과목</th><th colspan="8">수강 예정 과목</th></tr>
-        <tr>                                               <th colspan="8">이산수학</th><th colspan="8">JAVA 프로그래밍</th></tr>
-        <tr>                                               <th colspan="8">C프로그래밍</th><th colspan="8">컴퓨터 통신 보안</th></tr>
-        <tr>                                               <th colspan="8">인터넷 응용</th><th colspan="8">네트워크 보안</th></tr>
+        <tr>                                               <th colspan="8"><a href="이산수학.html" target="_blank">이산수학</a></th><th colspan="8"><a href="JAVA 프로그래밍.html" target="_blank">JAVA 프로그래밍</a></th></tr>
+        <tr>                                               <th colspan="8"><a href="프로그래밍 기초 및 실습.html" target="_blank">프로그래밍 기초 및 실습</a></th><th colspan="8"><a href="컴퓨터 통신 보안.html" target="_blank">컴퓨터 통신 보안</a></th></tr>
+        <tr>                                               <th colspan="8"><a href="인터넷 응용.html" target="_blank">인터넷 응용</a></th><th colspan="8"><a href="네트워크 보안.html" target="_blank">네트워크 보안</a></th></tr>
         <tr><th rowspan="4" colspan="4">자격증 및 면허</th><th colspan="6">취득 연월</th><th colspan="6">자격 - 면허명</th><th colspan="4">발행기관</th></tr>
-        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보처리 산업기사</th><th colspan="4"><a href="http://www.hrdkorea.or.kr/" target="_blank">한국산업인력공단</a></th></tr>
-        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">정보보안 산업기사</th><th colspan="4"><a href="https://www.kisa.or.kr/main.jsp" target="_blank">한국인터넷진흥원</a></th></tr>
-        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">CISA</th><th colspan="4"><a href="http://www.isaca.or.kr/main/index.asp" target="_blank">정보시스템 감사 컨트롤 협회</a></th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6"><a href="정보처리 산업기사.html" target="_blank">정보처리 산업기사</a></th><th colspan="4"><a href="http://www.hrdkorea.or.kr/" target="_blank">한국산업인력공단</a></th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6"><a href="정보보안 산업기사.html" target="_blank">정보보안 산업기사</a></th><th colspan="4"><a href="https://www.kisa.or.kr/main.jsp" target="_blank">한국인터넷진흥원</a></th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6"><a href="CISA.html" target="_blank">CISA</a></th><th colspan="4"><a href="http://www.isaca.or.kr/main/index.asp" target="_blank">정보시스템 감사 컨트롤 협회</a></th></tr>
         <tr><th rowspan="3" colspan="4">교내 ㆍ 외 경진 대회</th><th colspan="6">참가 연월</th><th colspan="6">대회명</th><th colspan="4">수상경력</th></tr>
-        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">부산 ICT 융합 해카톤 대회</th><th colspan="4">(예정)</th></tr>
-        <tr>                                              <th colspan="6">(예정)</th><th colspan="6">캡스톤 디자인 경진 대회</th><th colspan="4">(예정)</th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6"><a href="부산 ICT 융합 해카톤 대회.html" target="_blank">부산 ICT 융합 해카톤 대회</a></th><th colspan="4">(예정)</th></tr>
+        <tr>                                              <th colspan="6">(예정)</th><th colspan="6"><a href="캡스톤 디자인 경진 대회.html" target="_blank">캡스톤 디자인 경진 대회</a></th><th colspan="4">(예정)</th></tr>
         <tr><th rowspan="3" colspan="4">프로젝트</th><th colspan="6">학년 - 학기</th><th colspan="6">과목</th><th colspan="4">프로젝트명</th></tr>
-        <tr>                                              <th colspan="6">2학년 1학기</th><th colspan="6">인터넷 응용</th><th colspan="4"><a href="http://seokbonges.djsch.kr/main.do" target="_blank">개인별Index.html</th></tr>
-        <tr>                                              <th colspan="6">2학년 1학기</th><th colspan="6">인터넷 응용</th><th colspan="4"><a href="http://seokbonges.djsch.kr/main.do" target="_blank">기술이력서.html</th></tr>
+        <tr>                                              <th colspan="6">2학년 1학기</th><th colspan="6">인터넷 응용</th><th colspan="4"><a href="https://youngjaekim22.github.io/%EA%B0%9C%EC%9D%B8%EB%B3%84index.html" target="_blank">개인별Index.html</th></tr>
+        <tr>                                              <th colspan="6">2학년 1학기</th><th colspan="6">인터넷 응용</th><th colspan="4"><a href="https://youngjaekim22.github.io/%EA%B8%B0%EC%88%A0%EC%9D%B4%EB%A0%A5%EC%84%9C.html" target="_blank">기술이력서.html</th></tr>
     </table>
   </body>
 </html>
