--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <p>4. 두번째 학생은 홍길동과 첫번째 학생이름을 기준으로 가나다순 입력</p>
   <p>5. 마지막 학생까지 계속 진행하여 리스트 완성</p>
   <ol type="1">
-  <li><a href="https://github.com/youngjaekim22/youngjaekim22.github.io/"target="_blank">김영재</a></li>
+  <li><a href="youngjaekim22.github.io/개인별index.html"target="_blank">김영재</a></li>
   <li><a href="https://kdhong.github.io/abc.html" target="_blank">홍길동</a></li>
   </ol>
 </section>
