--- a/formSearch1.html
+++ b/formSearch1.html
@@ -13,7 +13,7 @@
             <label for="searchx">검색단어:</label>
             <input type="search" id="searchx" name="searchkeyword" placeholder="검색어 입력"/>           
             <button type="submit">조회</button>
-            <input type="reset" name="reset1" value="reading"/>
+            <input type="reset" name="reset1" value="취소"/>
         </fieldset>
       </form>
     </section>
