--- a/formSearch1.html
+++ b/formSearch1.html
@@ -11,7 +11,7 @@
         <fieldset>
           <legend>정보검색</legend>
             <label for="searchx">검색단어:</label>
-            <input type="search" id="searchx" name="searchkeyword" placeholder="검색어 입력"/>           
+            <input type="search" id="searchx" name="searchKeyword" placeholder="검색어 입력"/>           
             <button type="submit">조회</button>
             <input type="reset" name="reset1" value="취소"/>
         </fieldset>
