--- a/dd.html
+++ b/dd.html
@@ -1,4 +1,4 @@
-<!doctype  html>     <!--   inter1.html -->
+<!doctype  html>     <!--   dd.html -->
 <html><head>
 < meta charset="utf-8"/>
 < meta name="viewport" content="width=device-width, initial-scale=1"/>
