--- a/inter1.html
+++ b/inter1.html
@@ -1,23 +1,24 @@
 <!doctype  html>     <!--   inter1.html -->
-<html><head>
-< ="utf-8"/>
-< name="viewport" content="width=device-width, initial-scale=1"/>
-<style>
-  a: {color:blue; text-decoration:none;} a:visited { color:purple; text-decoration:none;}
-  a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;}
-</style>
-< src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></ >
-< >20XX년도 인터넷 수강</ >
-</head>
-<body>
-<header></header>
-<section>
-  <p>(설명문)가나다 순으로 자신의 이름을 입력, 마지막 작성자는 JSP(내이름)과 (설명문)을 반드시 지울 것</p>
-  <ol type ="1">
-  <li><a href=https://youngjaekim22.github.io/index.html" target="_blank">김영재</a></li>
-  <li><a href="https://xxxxxxxxxxx.github.io/" target="_blank">이몽룡</a></li>
-  <li><a href="https://xxxxxxxxxxx.github.io/" target="_blank">홍길동</a></li>
-  </ol>
-</section>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <style>
+      a: {color:blue; text-decoration:none;} a:visited { color:purple; text-decoration:none;}
+      a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;}
+    </style>
+    < src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></ >
+    < >20XX년도 인터넷 수강</ >
+  </head>
+  <body>
+    <header></header>
+    <section>
+      <p>(설명문)가나다 순으로 자신의 이름을 입력, 마지막 작성자는 JSP(내이름)과 (설명문)을 반드시 지울 것</p>
+      <ol type ="1">
+        <li><a href="https://youngjaekim22.github.io/index.html" target="_blank">김영재</a></li>
+        <li><a href="https://xxxxxxxxxxx.github.io/" target="_blank">이몽룡</a></li>
+        <li><a href="https://xxxxxxxxxxx.github.io/" target="_blank">홍길동</a></li>
+      </ol>
+    </section>
+  </body>
 </html> 
