--- a/inter1.html
+++ b/inter1.html
@@ -7,8 +7,8 @@
       a: {color:blue; text-decoration:none;} a:visited { color:purple; text-decoration:none;}
       a:hover { text-decoration:underline;} a:active {color:red; text-decoration:none;}
     </style>
-    < src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></ >
-    < >20XX년도 인터넷 수강</ >
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <title>20XX년도 인터넷 수강</title>
   </head>
   <body>
     <header></header>
