--- a/formFormaction1.html
+++ b/formFormaction1.html
@@ -18,6 +18,7 @@
           <input type="submit" value="대중교통" formaction="http://jsptogo.herokuapp.com/jspsrc/formPublic1.jsp"/>
           <input type="submit" value="자전거" formaction="http://jsptogo.herokuapp.com/jspsrc/formBike1.jsp"/>
         </fieldset>
+      </form>
     </section>
   </body>
 </html>
