--- a/basicCssIntro.html
+++ b/basicCssIntro.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
-      div#div1{border:1px solid red;}
-      div#div2{display:inline; border:1px solid red;}
+      div#div1{                border:1px solid red;}
+      div#div2{display:inline; border:1px solid blue;}
       div#div3{display:none;}
     </style>
     <title>CSS 실습</title>
