--- a/sampleDom.html
+++ b/sampleDom.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <link rel="stylesheet" href="sample.css"/>
-    <script src="js/sample.js"></script>
+    <script src="sample.js"></script>
     <title>CSS 실습</title>
   </head>
   <body>
