--- a/sampleDom.html
+++ b/sampleDom.html
@@ -13,8 +13,8 @@
     </header>
     <nav>
       <ul>
-        <li><a href="www.dju.ac.kr">대학</a></li>
-        <li><a href="hive.dju.ac.kr">실습서버</a></li>
+        <li><a href="http://www.dju.ac.kr">대학</a></li>
+        <li><a href="http://hive.dju.ac.kr">실습서버</a></li>
       </ul>
     </nav>
     <section>
