--- a/complexChild.html
+++ b/complexChild.html
@@ -1,4 +1,4 @@
-<!doctype html> <!--  complexchild.html  -->
+<!doctype html> <!--  complexChild.html  -->
 <html>
   <head>
     <meta charset="utf-8"/>
