--- a/complexChild.html
+++ b/complexChild.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <section>
-      <h3>복합선택자 후손</h3>
+      <h3>복합선택자 자식</h3>
       <div>
         동해물과 <p>백두산이 <span>마르고</span> 닳도록</p>
       </div>
