--- a/complexBro.html
+++ b/complexBro.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <title>복합선택자 자식 실습</title>
     <style>
-      section + span{font-size: 150%; color:red; }
+      div + span{font-size: 150%; color:red; }
     </style>
   </head>
   <body>
