--- a/cssText1.html
+++ b/cssText1.html
@@ -16,7 +16,7 @@
     p#indent{text-indent:2em}
     p>span.shadow{text-shadow:0.1em 0.1em 0.2em #000000;}
   </style>
-  <tltle>CSS 텍스트 실습</title>
+  <title>CSS 텍스트 실습</title>
   </head>
   <body>
     <section id="section1">
