--- a/cssText1.html
+++ b/cssText1.html
@@ -10,9 +10,9 @@
     p#right{text-align:right;}
     p#center{text-align:center;}
     p#justify{text-align:justify;}
-    p->span.unln{text-decoration:underline;}
-    p->span.ovln{text-decoration:overline;}
-    p->span.lnth{text-decoration:line-through;}
+    p>span.unln{text-decoration:underline;}
+    p>span.ovln{text-decoration:overline;}
+    p>span.lnth{text-decoration:line-through;}
     p#indent{text-indent:2em}
     p>span.shadow{text-shadow:0.1em 0.1em 0.2em #000000;}
   </style>
