--- a/cssFont1.html
+++ b/cssFont1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
       .fontFamilyA{font-family:"Times New Roman", Garamond, serif;}
-      .fontFamilyB{font-family:Helvetica, "MS Verdana, sans-serif;}
+      .fontFamilyB{font-family:Helvetica, "MS Verdana", sans-serif;}
       .fontSizeA{font-size:100%;}
       .fontSizeB{font-size:200%;}
       .fontStyleA{font-style:normal;}
