--- a/complexBro.html
+++ b/complexBro.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
-    <title>복합선택자 자식 실습</title>
+    <title>복합선택자 형제 실습</title>
     <style>
       div + span{font-size: 150%; color:red; }
     </style>
