--- a/cssDisp1.html
+++ b/cssDisp1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
       .ordinary{border:1px solid black;}
-      .displine{display:inline; border:1px solid balck;}
+      .dispinline{display:inline; border:1px solid balck;}
       .dispblock{display:block; border:1px solid blank;}
       .dispinlineblock{display:inline-block; border:1px solid blank; width:150px; height:50px;}
     </style>
@@ -16,8 +16,8 @@
       <h4>1. 블록레벨 엘리머느 p의 inline 적용</h4>
       <p class="ordinary">(블록 엘리먼트 p)동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세</p>
       <p class="ordinary">(블록 엘리먼트 p)무궁화 삼천리 화려강산 대한 사람 대한으로 길이 보전하세</p>
-      <p class="displine">(inline으로 변경)동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세</p>
-      <p class="displine">(inline으로 변경)무궁화 삼천리 화려강산 대한 사람 대한으로 길이 보전하세</p>
+      <p class="dispinline">(inline으로 변경)동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리나라 만세</p>
+      <p class="dispinline">(inline으로 변경)무궁화 삼천리 화려강산 대한 사람 대한으로 길이 보전하세</p>
       <h4>2. 인라인 엘리먼트 span의 block 적용</h4>
       <p>동해물과 백두산이 <span>(span)마르고</span>닳도록</p>
       <p>동해물과 백두산이 <span class="dispblock">(span을 block으로 변경)마르고</span>닳도록</p>
