--- a/cssDisp1.html
+++ b/cssDisp1.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
       .ordinary{border:1px solid black;}
-      .dispinline{display:inline; border:1px solid balck;}
-      .dispblock{display:block; border:1px solid blank;}
-      .dispinlineblock{display:inline-block; border:1px solid blank; width:150px; height:50px;}
+      .dispinline{display:inline; border:1px solid black;}
+      .dispblock{display:block; border:1px solid black;}
+      .dispinlineblock{display:inline-block; border:1px solid black; width:150px; height:50px;}
     </style>
     <title>CSS display/visibility 실습</title>
   </head>
