--- a/cssVis1.html
+++ b/cssVis1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
-      .dispinline{display:inline; border:1px solid balck;}
+      .dispinline{display:inline; border:1px solid black;}
       .dispnone{display:none;}
       .vishidden{visibility:hidden}
       table, tr, th, td{border:1px solid black; border-collapse:collapse;} tr.collapse{visibility:collapse;}
