--- a/cssStatic1.html
+++ b/cssStatic1.html
@@ -13,7 +13,7 @@
     </style>
   </head>
   <body>
-    <div>
+    <div class="div0">
       <span class="bdcolor span1">1</span>
       <span class="bdcolor span2">2</span>
       <div class="bdcolor div3">3</div>
