--- a/cssFixed1.html
+++ b/cssFixed1.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>position(배치) 실습</title>
     <style>
-      *{padding:static:0; margin:0;}
+      *{padding:0; margin:0;}
       .div0{position:static; width:300px; height:100px; border:50px solid lightgray;}
       .span1, .span2, .span4{position:static;}
       .div3{position:fixed; top:200px; left:200px;}
