--- a/cssOverFloat1.html
+++ b/cssOverFloat1.html
@@ -7,7 +7,7 @@
       *{padding:0; margin:0;}
       p{text-align:justify;}
       .bdcolor{boder:1px solid blue;}
-      img{displat:block;}
+      img{display:block;}
       .img1{float:left; margin:5px;}
     </style>
     <title>CSS float 실습</title>
