--- a/cssClear1.html
+++ b/cssClear1.html
@@ -9,7 +9,7 @@
       .bdcolor{boder:1px solid blue;}
       img{display:block;}
       .img1{float:left; margin:5px;}
-      .img2{float:both; margin:5px;}
+      .img2{clear:both; margin:5px;}
     </style>
     <title>CSS float 실습</title>
   </head>
