--- a/cssClear1.html
+++ b/cssClear1.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
-      *{padding:0; margin:0;}
+      *{margin:0; padding:0;}
       p{text-align:justify;}
-      .bdcolor{boder:1px solid blue;}
+      .bdcolor{border:1px solid blue;}
       img{display:block;}
       .img1{float:left; margin:5px;}
       .img2{clear:both; margin:5px;}
