--- a/cssFloat1.html
+++ b/cssFloat1.html
@@ -1,4 +1,4 @@
-<!doctype html> <!--  cssOverFloat1.html  -->
+<!doctype html> <!--  cssFloat1.html  -->
 <html>
   <head>
     <meta charset="utf-8"/>
@@ -6,7 +6,7 @@
     <style>
       *{padding:0; margin:0;}
       p{text-align:justify;}
-      .bdcolor{boder:1px solid blue;}
+      .bdcolor{border:1px solid blue;}
       img{display:block;}
       .img1{float:left; margin:5px;}
     </style>
