--- a/cssOverflow1.html
+++ b/cssOverflow1.html
@@ -6,7 +6,7 @@
     <style>
       *{padding:0; margin:0;}
       p{text-align:justify;}
-      .bdcolor{boder:1px solid blue;}
+      .bdcolor{border:1px solid blue;}
       .over1{overflow:visible;}
       .over2{overflow:hidden;}
       .over3{overflow:scroll;}
