--- a/cssOverflowImage1.html
+++ b/cssOverflowImage1.html
@@ -6,7 +6,7 @@
     <style>
       *{padding:0; margin:0;}
       p{text-align:justify;}
-      .bdcolor{boder:1px solid blue;}
+      .bdcolor{border:1px solid blue;}
       .imageOver::after{content:""; clear:both; display:table;}
       .float1{float:left;}
       .clear1{clear1:both;}
