--- a/cssOverflowImage1.html
+++ b/cssOverflowImage1.html
@@ -9,7 +9,7 @@
       .bdcolor{border:1px solid blue;}
       .imageOver::after{content:""; clear:both; display:table;}
       .float1{float:left;}
-      .clear1{clear1:both;}
+      .clear1{clear:both;}
     </style>
     <title>CSS overflow 실습</title>
   </head>
