--- a/ePortfolio.html
+++ b/ePortfolio.html
@@ -4,12 +4,11 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
-      header, nav, section, article, aside, footer
+      header, nav, section, article, aside, footer{border:10px groove gray; margin:5px; padding:8px; width:1000px;}
       *{padding:0; margin:0;}
       .bodybackground{background-color:skyblue;}
       .imgleft{float:left; margin:50px;}
       .imgright{float:right; margin:50px;}
-      {border:10px groove gray; margin:5px; padding:8px; width:1000px;}
       header h2{float:center; margin:0 0 0 0;  text-align:center;}
       header ul{margin:0; padding:0;}
       header ul li{display:inline; margin:5px}
