--- a/ePortfolio.html
+++ b/ePortfolio.html
@@ -30,7 +30,7 @@
       a:active{
         color:blue; background-color:transparent; text-decoration:none;}
     </style>
-    <title>시멘틱 학습</title>
+    <title>ePortfolio 과제</title>
   </head>
   <body class="bodybackground">
     <header>
