--- a/ePortfolio.html
+++ b/ePortfolio.html
@@ -7,9 +7,9 @@
       header, nav, section, article, aside, footer{border:10px groove gray; margin:5px; padding:8px; width:1000px;}
       *{padding:0; margin:0;}
       .bodybackground{background-color:skyblue;}
-      .imgleft{float:left; margin:50px;}
-      .imgright{float:right; margin:50px;}
-      header h2{float:center; margin:0 0 0 0;  text-align:center;}
+      .imgleft{float:left; width:25px;}
+      .imgright{float:right; width:25px;}
+      h2{float:center; margin:0 0 0 0;  text-align:center;}
       header ul{margin:0; padding:0;}
       header ul li{display:inline; margin:5px}
       section{width:750px; float:left;}
@@ -34,7 +34,7 @@
   </head>
   <body class="bodybackground">
     <header>
-      <img class="imgleft" src="dju.jpg" width:100px; heigh:100px;>ePortfolio<img class="imgright" src="dju.jpg" width:100px; heigh:100px;>
+      <img class="imgleft" src="dju.jpg" width:100px; heigh:100px;><h2>ePortfolio</h2><img class="imgright" src="dju.jpg" width:100px; heigh:100px;>
     </header>
     <nav>
       <ul>
