--- a/ePortfolio.html
+++ b/ePortfolio.html
@@ -6,7 +6,7 @@
     <style>
       header, nav, section, article, aside, footer{border:10px groove gray; margin:5px; padding:8px; width:1000px;}
       *{padding:0; margin:0;}
-      .bodybackground{background-color:skyblue;}
+      .bodybackground{background-color:RGB(201, 214, 229);}
       .imgleft{float:left; width:30px;}
       .imgright{float:right; width:30px;}
       h2{float:center; margin:0 0 0 0;  text-align:center;}
@@ -34,7 +34,7 @@
   </head>
   <body class="bodybackground">
     <header>
-      <img class="imgleft" src="dju.jpg" width:100px; heigh:100px;><h2>ePortfolio</h2><img class="imgright" src="dju.jpg" width:100px; heigh:100px;>
+      <img class="imgleft" src="dju.jpg" width:100px; heigh:100px;><h2>ePortfolio</h2>
     </header>
     <nav>
       <ul>
@@ -50,23 +50,23 @@
       </section>
       <section>
         <h3><a herf="lecture.html">수강(예정) 과목</a></h3>
-        <p>수강 과목과 수강 예정 과목과 함께 전공 교과 과정표를 확인하실 수 있습니다.</p>
+        <p style="color:green">수강 과목과 수강 예정 과목과 함께 전공 교과 과정표를 확인하실 수 있습니다.</p>
       </section>
       <section>
         <h3><a herf="license.html" target="_blank">자격증 및 면허</a></h3>
-        <p>취득 및 취득 예정인 자격증 및 면허를 확인하실 수 있습니다.</p>
+        <p style="color:green">취득 및 취득 예정인 자격증 및 면허를 확인하실 수 있습니다.</p>
       </section>
       <section>
         <h3><a herf="contest.html" target="_blank">교내외 경진대회</a></h3>
-        <p>참가 및 참가 예정인 교내외 경진대회를 확인하실 수 있습니다.</p>
+        <p style="color:green">참가 및 참가 예정인 교내외 경진대회를 확인하실 수 있습니다.</p>
       </section>
       <section>
         <h3><a herf="project.html" target="_blank">프로젝트</a></h3>
-        <p>학기말 프로젝트 수행 내역을 확인하실 수 있습니다.</p>
+        <p style="color:green">학기말 프로젝트 수행 내역을 확인하실 수 있습니다.</p>
       </section>
       <section>
         <h3><a herf="club.html" target="_blank">동아리 및 봉사활동</a></h3>
-        <p>동아리 활동 및 봉사 활동에 대해 확인하실 수 있습니다.</p>
+        <p style="color:green">동아리 활동 및 봉사 활동에 대해 확인하실 수 있습니다.</p>
       </section>
     </section>
     <aside>
