--- a/ePortfolio.html
+++ b/ePortfolio.html
@@ -39,6 +39,11 @@
     <nav>
       <ul>
         <li><a href="http://www.dju.ac.kr/kor/html/main.htm" target="_blank">대전대학교</a></li>
+        <li><a href="lecture.html">수강(예정) 과목</a></li>
+        <li><a href="license.html">자격증 및 면허</a></li>
+        <li><a href="contest.html">교내외 경진대회</a></li>
+        <li><a href="project.html">프로젝트</a></li>
+        <li><a href="club.html">동아리 및 봉사활동</a></li>
       </ul>
     </nav>
     <section>
