--- a/cssList.html
+++ b/cssList.html
@@ -26,16 +26,16 @@
       <ul class="a"><li>cicle</li><li>사과</li><li>배</li></ul>
       <ul class="b"><li>disc</li><li>사과</li><li>배</li></ul>
       <ul class="c"><li>square</li><li>사과</li><li>배</li></ul>
-      <ol class="d"><li>아라비아 숫자</li><li>사과</li><li>배</li></ul>
-      <ol class="e"><li>0있는 아라바아 숫자</li><li>사과</li><li>배</li></ul>
-      <ol class="f"><li>lower-alpha</li><li>사과</li><li>배</li></ul>
-      <ol class="g"><li>upper-alpha</li><li>사과</li><li>배</li></ul>
-      <ol class="h"><li>lowe-greek</li><li>사과</li><li>배</li></ul>
-      <ol class="i"><li>uper-greek</li><li>사과</li><li>배</li></ul>
-      <ol class="j"><li>lower-latin</li><li>사과</li><li>배</li></ul>
-      <ol class="k"><li>upper-litin</li><li>사과</li><li>배</li></ul>
-      <ol class="l"><li>lower-roman</li><li>사과</li><li>배</li></ul>
-      <ol class="m"><li>upper-roman</li><li>사과</li><li>배</li></ul>
+      <ol class="d"><li>아라비아 숫자</li><li>사과</li><li>배</li></ol>
+      <ol class="e"><li>0있는 아라바아 숫자</li><li>사과</li><li>배</li></oll>
+      <ol class="f"><li>lower-alpha</li><li>사과</li><li>배</li></ol>
+      <ol class="g"><li>upper-alpha</li><li>사과</li><li>배</li></ol>
+      <ol class="h"><li>lowe-greek</li><li>사과</li><li>배</li></ol>
+      <ol class="i"><li>uper-greek</li><li>사과</li><li>배</li></ol>
+      <ol class="j"><li>lower-latin</li><li>사과</li><li>배</li></ol>
+      <ol class="k"><li>upper-litin</li><li>사과</li><li>배</li></ol>
+      <ol class="l"><li>lower-roman</li><li>사과</li><li>배</li></ol>
+      <ol class="m"><li>upper-roman</li><li>사과</li><li>배</li></ol>
       <ul class="o"><li>none</li><li>사과</li><li>배</li></ul>
     </section>
   </body>
