--- a/cssList.html
+++ b/cssList.html
@@ -9,8 +9,8 @@
       ul.c{list-style-type:square;}
       ol.d{list-style-type:decimal;}
       ol.e{list-style-type:decimal-leading-zero;}
-      ol.g{list-style-type:upper-alpha;}
       ol.f{list-style-type:lower-alpha;}
+      ol.g{list-style-type:upper-alpha;}     
       ol.h{list-style-type:lower-greek;}
       ol.i{list-style-type:upper-greek;}
       ol.j{list-style-type:lower-latin;}
@@ -23,6 +23,7 @@
   </head>
   <body>
     <section>
+      <h3>목록</h3>
       <ul class="a"><li>cicle</li><li>사과</li><li>배</li></ul>
       <ul class="b"><li>disc</li><li>사과</li><li>배</li></ul>
       <ul class="c"><li>square</li><li>사과</li><li>배</li></ul>
@@ -36,7 +37,7 @@
       <ol class="k"><li>upper-litin</li><li>사과</li><li>배</li></ol>
       <ol class="l"><li>lower-roman</li><li>사과</li><li>배</li></ol>
       <ol class="m"><li>upper-roman</li><li>사과</li><li>배</li></ol>
-      <ul class="o"><li>none</li><li>사과</li><li>배</li></ul>
+      <ol class="o"><li>none</li><li>사과</li><li>배</li></ol>
     </section>
   </body>
 </html>
