--- a/cssList.html
+++ b/cssList.html
@@ -28,7 +28,7 @@
       <ul class="b"><li>disc</li><li>사과</li><li>배</li></ul>
       <ul class="c"><li>square</li><li>사과</li><li>배</li></ul>
       <ol class="d"><li>아라비아 숫자</li><li>사과</li><li>배</li></ol>
-      <ol class="e"><li>0있는 아라바아 숫자</li><li>사과</li><li>배</li></oll>
+      <ol class="e"><li>0있는 아라바아 숫자</li><li>사과</li><li>배</li></ol>
       <ol class="f"><li>lower-alpha</li><li>사과</li><li>배</li></ol>
       <ol class="g"><li>upper-alpha</li><li>사과</li><li>배</li></ol>
       <ol class="h"><li>lowe-greek</li><li>사과</li><li>배</li></ol>
