--- a/cssList.html
+++ b/cssList.html
@@ -34,7 +34,7 @@
       <ol class="h"><li>lowe-greek</li><li>사과</li><li>배</li></ol>
       <ol class="i"><li>uper-greek</li><li>사과</li><li>배</li></ol>
       <ol class="j"><li>lower-latin</li><li>사과</li><li>배</li></ol>
-      <ol class="k"><li>upper-litin</li><li>사과</li><li>배</li></ol>
+      <ol class="k"><li>upper-latin</li><li>사과</li><li>배</li></ol>
       <ol class="l"><li>lower-roman</li><li>사과</li><li>배</li></ol>
       <ol class="m"><li>upper-roman</li><li>사과</li><li>배</li></ol>
       <ol class="o"><li>none</li><li>사과</li><li>배</li></ol>
