--- a/cssList2.html
+++ b/cssList2.html
@@ -7,9 +7,9 @@
       ol.inside{list-style-position:inside;}
       ol.outside{list-style-position:outside;}
       ol li{boder:1px solid gray;}
-      ul.img{list-style-image:url("lobster");}
+      ul.img{list-style-image:url("lobster.png");}
       ul.char{list-style:none;}
-      il.char li:before{content:"#"; padding-right:0px; color:red;}
+      ul.char li:before{content:"#"; padding-right:0px; color:red;}
       ol.all{list-style:decimal-leading-zero inside;}
       ul.menu li{list-style:none; display:inline; background-color:red;}
     </style>
@@ -22,7 +22,7 @@
       <ol class="outside"><li>outside position</li><li>사과</li><li>배</li><li>포도</li></ol>
       <ul class="img"><li>image</li><li>사과</li></ul>
       <ul class="char"><li>기타문자</li><li>사과</li><li>배</li><li>포도</li></ul>
-      <ol class="all"><li>list-style:decimal-leading-zero inside</li><li>사과</li><li>배</li><li>포도</li></ol>
+      <ol class="all"><li>한줄로 list-style:decimal-leading-zero inside</li><li>사과</li><li>배</li><li>포도</li></ol>
       <ul class="menu"><li>메뉴</li><li>로그인</li><li>회원가입</li><li>사이트맵</li></ul>
     </section>
   </body>
