--- a/cssList2.html
+++ b/cssList2.html
@@ -6,7 +6,7 @@
     <style>
       ol.inside{list-style-position:inside;}
       ol.outside{list-style-position:outside;}
-      ol li{boder:1px solid gray;}
+      ol li{border:1px solid gray;}
       ul.img{list-style-image:url("lobster.png");}
       ul.char{list-style:none;}
       ul.char li:before{content:"#"; padding-right:0px; color:red;}
