--- a/cssList2.html
+++ b/cssList2.html
@@ -10,8 +10,10 @@
       ul.img{list-style-image:url("lobster.png");}
       ul.char{list-style:none;}
       ul.char li:before{content:"#"; padding-right:0px; color:red;}
+      /*ul li:before{content:"lobster.png"; padding-right:0px; color:red;}*/
       ol.all{list-style:decimal-leading-zero inside;}
       ul.menu li{list-style:none; display:inline; background-color:red;}
+      /*ul.menu li{list-style:none; display:inline; padding:0 20px 0 20px;}*/
     </style>
     <title>CSS 목록 실습</title>
   </head>
