--- a/cssList2.html
+++ b/cssList2.html
@@ -7,10 +7,10 @@
       ol.inside{list-style-position:inside;}
       ol.outside{list-style-position:outside;}
       ol li{border:1px solid gray;}
-      ul.img{list-style-image:url("lobster.png");}
+      ul.img{list-style-image:url("lobster1.png");}
       ul.char{list-style:none;}
       ul.char li:before{content:"#"; padding-right:0px; color:red;}
-      /*ul li:before{content:"lobster.png"; padding-right:0px; color:red;}*/
+      /*ul li:before{content:"lobster1.png"; padding-right:0px; color:red;}*/
       ol.all{list-style:decimal-leading-zero inside;}
       ul.menu li{list-style:none; display:inline; background-color:red;}
       /*ul.menu li{list-style:none; display:inline; padding:0 20px 0 20px;}*/
