--- a/lecture.html
+++ b/lecture.html
@@ -87,9 +87,10 @@
       </section>
       <section>
         <h3>교과 과정표</h3>
-        <img src="교과 과정표1">
-        <img src="교과 과정표2">
+        <img src="교과 과정표1.png">
+        <img src="교과 과정표2.png">
       </section>
+    </section>
     <aside>
       <ul>
         <li><a href="http://www.dju.ac.kr/kor/html/main.htm"><img src="dju.jpg" alt="대전대학교"/></a></li>
