--- a/lecture.html
+++ b/lecture.html
@@ -87,13 +87,13 @@
       </section>
       <section>
         <h3>교과 과정표</h3>
-        <img src="교과과정표1.png">
-        <img src="교과과정표2.png">
+        <img src="교과과정표1.png" width:570px;>
+        <img src="교과과정표2.png" width:570px;>
       </section>
     </section>
     <aside>
       <ul>
-        <li><a href="http://www.dju.ac.kr/kor/html/main.htm"><img src="dju.jpg" alt="대전대학교"/></a></li>
+        <li><a href="http://www.dju.ac.kr/kor/html/main.htm"><img src="dju.jpg" target="_blank" alt="대전대학교"/></a></li>
       </ul>
     </aside>
     <footer>
