--- a/lecture.html
+++ b/lecture.html
@@ -87,8 +87,8 @@
       </section>
       <section>
         <h3>교과 과정표</h3>
-        <img src="교과과정표1.png" width:570px;>
-        <img src="교과과정표2.png" width:570px;>
+        <img src="교과과정표1.png">
+        <img src="교과과정표2.png">
       </section>
     </section>
     <aside>
