--- a/lecture.html
+++ b/lecture.html
@@ -88,7 +88,7 @@
       <section>
         <h3>교과 과정표</h3>
         <img src="교과과정표1.png">
-        <img src="교과과정표2.png">
+        <img src="교과과정표2.png" width:550px;>
       </section>
     </section>
     <aside>
