--- a/ePortfolio.html
+++ b/ePortfolio.html
@@ -24,7 +24,7 @@
       a:link{
         color:blue; background-color:transparent; text-decoration:none;}
       a:visited{
-        color:pink; background-color:transparent; text-decoration:none;}
+        color:yellow; background-color:transparent; text-decoration:none;}
       a:hover{
         color:red; background-color:transparent; text-decoration:underline;}
       a:active{
