--- a/license.html
+++ b/license.html
@@ -34,7 +34,7 @@
   </head>
   <body class="bodybackground">
     <header>
-      <img class="imgleft" src="dju.jpg" width:100px; heigh:100px;><h2>자격증 및 </h2>
+      <img class="imgleft" src="dju.jpg" width:100px; heigh:100px;><h2>자격증 및 면허</h2>
     </header>
     <nav>
       <ul>
