--- a/contest.html
+++ b/contest.html
@@ -59,6 +59,7 @@
         <h3>캡스톤 디자인 경진 대회</h3>
         <p style="color:green">설명 : 산업현장에서 부딪칠 수 있는 문제들을 해결할 수 있는 능력을 길러주기 위해 작품을 기획, 설계, 제작하는 대회입니다.</p>
       </section>
+    </section>
     <aside>
       <ul>
         <li><a href="http://www.dju.ac.kr/kor/html/main.htm"><img src="dju.jpg" alt="대전대학교"/></a></li>
