--- a/contest.html
+++ b/contest.html
@@ -52,11 +52,11 @@
         <p style="color:green">참가 및 참가 예정인 교내외 경진대회를 확인하실 수 있습니다.</p>
       </section>
       <section>
-        <h3>부산 ICT 융합 해카톤 대회</h3>
+        <h3>부산 ICT 융합 해카톤 대회 (예정)</h3>
         <p style="color:green">설명 : ICT기술을 활용한 다양한 분야의 문제 및 이슈 해결을 주제로 부산에서 개최되는 대회입니다.</p>
       </section>
       <section>
-        <h3>캡스톤 디자인 경진 대회</h3>
+        <h3>캡스톤 디자인 경진 대회 (예정)</h3>
         <p style="color:green">설명 : 산업현장에서 부딪칠 수 있는 문제들을 해결할 수 있는 능력을 길러주기 위해 작품을 기획, 설계, 제작하는 대회입니다.</p>
       </section>
     </section>
