--- a/ePortfolio.html
+++ b/ePortfolio.html
@@ -54,23 +54,23 @@
         <p>사이트 제작 목적 : 향후 취업을 위한 기술 이력서를 인터넷 홈페이지로 작성 및 관리를 하기 위함입니다.</p>
       </section>
       <section>
-        <h3><a herf="lecture.html">수강(예정) 과목</a></h3>
+        <h3>수강(예정) 과목</h3>
         <p style="color:green">수강 과목과 수강 예정 과목과 함께 전공 교과 과정표를 확인하실 수 있습니다.</p>
       </section>
       <section>
-        <h3><a herf="license.html" target="_blank">자격증 및 면허</a></h3>
+        <h3>자격증 및 면허</h3>
         <p style="color:green">취득 및 취득 예정인 자격증 및 면허를 확인하실 수 있습니다.</p>
       </section>
       <section>
-        <h3><a herf="contest.html" target="_blank">교내외 경진대회</a></h3>
+        <h3>교내외 경진대회</h3>
         <p style="color:green">참가 및 참가 예정인 교내외 경진대회를 확인하실 수 있습니다.</p>
       </section>
       <section>
-        <h3><a herf="project.html" target="_blank">프로젝트</a></h3>
+        <h3>프로젝트</h3>
         <p style="color:green">학기말 프로젝트 수행 내역을 확인하실 수 있습니다.</p>
       </section>
       <section>
-        <h3><a herf="club.html" target="_blank">동아리 및 봉사활동</a></h3>
+        <h3>동아리 및 봉사활동</h3>
         <p style="color:green">동아리 활동 및 봉사 활동에 대해 확인하실 수 있습니다.</p>
       </section>
     </section>
