--- a/login2.html
+++ b/login2.html
@@ -5,7 +5,7 @@
     <style>
       #section0 {width:400px; height:120px; border:solid 1px lightgray; border-radius:1em;}
       ul.level_1>li {list-style:none; display:inline-block;}
-      ul.level_1>li>ㅕㅣ{list-style:none;}
+      ul.level_1>li>ul{list-style:none;}
     </style>
     <title>로그인 실습</title>
   </head>
@@ -18,8 +18,8 @@
             <li>아이디<input type="text"></li>
             <li>비밀번호<input type="password"></li>
           </ul>
+          <li><button>로그인</button></li>
         </li>
-        <li><button>로그인</button></li>
       </ul>
     </section>
   </body>
