--- a/login3.html
+++ b/login3.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <section id="section0">
-      <h4>회원 로그인</h4>
+      <h4>로그인</h4>
       <ul class="level_1">
         <li>
           <ul class="level_2">
