--- a/login4.html
+++ b/login4.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <style>
     *{padding:0; margin:0;}
       #section0 {width:230px; height:100px; margin:10px; padding:10px; border:solid 1px lightgray; border-radius:1em;}
