--- a/memb2.html
+++ b/memb2.html
@@ -19,7 +19,7 @@
         <li>비밀번호</li><li><input type="password"></li>
       </ul>
       <ul class="level_1">
-        <li><button>회원가입버튼</button></li><li><button>취소버튼</button></li>
+        <li><button>회원가입</button></li><li><button>취소</button></li>
       </ul>
     </section>
   </body>
