--- a/memb5.html
+++ b/memb5.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8"/>
     <style>
+      *{padding:0; margin:0;}
       #section0 {width:270px; height:125px; border:solid 1px lightgray; margin:10px; padding:10px; border-radius:1em; box-shadow:9px 6px 6px gray;}
       ul {list-style:none}
       ul.level_1>li {display:inline-block; line-height:1.5em;}
